--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,10 +1,12 @@
 
 <carousel-component #topCarousel [autoPlay]="true"
-  [delayAutoPlay]="3000" [angle]="0" [margin]="200" (onReachEnd)="reestartCarousel($event)">
-    <div class="item-carousel"><img src="https://images.unsplash.com/photo-1508847154043-be5407fcaa5a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" /></div>
+  [delayAutoPlay]="3000" [angle]="90" [margin]="200" (onReachEnd)="reestartCarousel($event)">
+    <div class="item-carousel">
+      <img src="https://images.unsplash.com/photo-1508847154043-be5407fcaa5a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" />
+      </div>
     <div class="item-carousel">
         <div class="b">
-            <img src="https://www.losminionsaldia.com/images/mas-minions/minion.png" />
+            <img src="https://images.unsplash.com/photo-1478061653917-455ba7f4a541?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" />
         </div>
     </div>
     <div class="item-carousel">c</div>
