--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -9,6 +9,9 @@
             <img src="https://images.unsplash.com/photo-1478061653917-455ba7f4a541?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="90%"/>
         </div>
     </div>
-    <div class="item-carousel">c</div>
+    <div class="item-carousel">
+      <iframe remote src="https://api.instagram.com/oembed?url=http://www.instagram.com/p/B1WhonynNeJ/" >
+      </iframe>
+    </div>
     <div class="item-carousel">d</div>
 </carousel-component>
