--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,4 +1,28 @@
+<ngb-carousel >
+  <ng-template ngbSlide>
 
+    <div class="carousel-caption">
+      <h3>First slide label</h3>
+      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+    </div>
+  </ng-template>
+  <ng-template ngbSlide>
+
+    <div class="carousel-caption">
+      <h3>Second slide label</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </div>
+  </ng-template>
+  <ng-template ngbSlide>
+
+    <div class="carousel-caption">
+      <h3>Third slide label</h3>
+      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+    </div>
+  </ng-template>
+</ngb-carousel>
+
+<!--
 <carousel-component #topCarousel [autoPlay]="true"
   [delayAutoPlay]="3000" [angle]="90" [margin]="200" (onReachEnd)="reestartCarousel($event)">
     <div class="item-carousel">
@@ -10,8 +34,9 @@
         </div>
     </div>
     <div class="item-carousel">
-      <iframe remote src="https://api.instagram.com/oembed?url=http://www.instagram.com/p/B1WhonynNeJ/" >
+      <iframe remote src="" >
       </iframe>
     </div>
     <div class="item-carousel">d</div>
 </carousel-component>
+-->
