--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,24 +1,12 @@
-<ngb-carousel >
+<ngb-carousel>
   <ng-template ngbSlide>
-
-    <div class="carousel-caption">
-      <h3>First slide label</h3>
-      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-    </div>
+    <h1>Teste Slider 1</h1>
   </ng-template>
   <ng-template ngbSlide>
-
-    <div class="carousel-caption">
-      <h3>Second slide label</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    </div>
+    <h1>Teste Slider 2</h1>
   </ng-template>
   <ng-template ngbSlide>
-
-    <div class="carousel-caption">
-      <h3>Third slide label</h3>
-      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-    </div>
+    <h1>Teste Slider 3</h1>
   </ng-template>
 </ngb-carousel>
 
