--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,6 +1,6 @@
-carousel-component {
-  max-width: 80%;
-  max-height: 400px;
+ngb-carousel {
+  width: 80%;
+  height: 400px;
   overflow: hide;
   margin: auto;
 }
