--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
+<div fxLayout="row" fxLayoutAlign="center stretch">
 <app-carousel></app-carousel>
+</div>
 
 <app-donate-card></app-donate-card>
 <app-card-line></app-card-line>
