--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,12 +1,15 @@
-<ngb-carousel>
+<ngb-carousel fxFlex>
   <ng-template ngbSlide>
-    <h1>Teste Slider 1</h1>
+    <h2>Teste Slider 1</h2>
+    <img src="https://images.unsplash.com/photo-1508847154043-be5407fcaa5a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="90%"/>
   </ng-template>
   <ng-template ngbSlide>
-    <h1>Teste Slider 2</h1>
+    <h2>Teste Slider 2</h2>
+    <img src="https://images.unsplash.com/photo-1478061653917-455ba7f4a541?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="100%"/>
   </ng-template>
   <ng-template ngbSlide>
-    <h1>Teste Slider 3</h1>
+    <h2>Teste Slider 3</h2>
+    <img src="https://images.unsplash.com/photo-1478061653917-455ba7f4a541?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="100%"/>
   </ng-template>
 </ngb-carousel>
 
