--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,8 +1,12 @@
 ngb-carousel {
   width: 80%;
-  height: 430px;
+  height: 400px;
   overflow: hide;
   margin: auto;
-  background-color: mistyrose;
+  background-color: lightsalmon;
   text-align: center;
+  color: black;
+}
+img {
+  padding: 10px 0px;
 }
