--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,6 +1,7 @@
 ngb-carousel {
   width: 80%;
   height: 400px;
+  max-height: 400px;
   overflow: hide;
   margin: auto;
   background-color: lightsalmon;
