--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,18 +1,17 @@
 <ngb-carousel fxFlex fxAign="center">
   <ng-template ngbSlide>
-    <h2>Teste Slider 1</h2>
-
-    <img src="https://images.unsplash.com/photo-1508847154043-be5407fcaa5a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="90%"/>
+    <img src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/sliderhome%2FSlidehome1.png?alt=media&token=683799e3-6714-4882-8ede-3fa415531a50" width="100%"/>
 
   </ng-template>
   <ng-template ngbSlide>
-    <h2>Teste Slider 2</h2>
-    <img src="https://images.unsplash.com/photo-1478061653917-455ba7f4a541?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="90%"/>
+    <img src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/sliderhome%2FSlidehome2.png?alt=media&token=06985ba3-83cd-4ce5-b06e-9a1844f8f267" width="100%"/>
   </ng-template>
+  <!--<ng-template ngbSlide>
+    <img src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/sliderhome%2Fslidehome3.png?alt=media&token=82a0ef81-a3af-4744-ae2c-4fd31b972390" width="100%"/>
+  </ng-template>-->
   <ng-template ngbSlide>
-    <h2>Teste Slider 3</h2>
-    <img src="https://images.unsplash.com/photo-1478061653917-455ba7f4a541?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" width="90%"/>
-  </ng-template>
+    <img src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/sliderhome%2Fslidehome4.png?alt=media&token=9189f508-401f-4479-91f7-55316ba6f41c" width="100%"/>
+</ng-template>
 </ngb-carousel>
 
 <!--
