--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,13 +1,11 @@
 ngb-carousel {
-  width: 80%;
-  height: 400px;
-  max-height: 400px;
+
   overflow: hide;
   margin: auto;
-  background-color: lightsalmon;
+  background-color: salmon;
   text-align: center;
   color: black;
 }
 img {
-  padding: 10px 0px;
+  padding: 2vh 0;
 }
