--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,7 +1,6 @@
 ngb-carousel {
-
   overflow: hide;
-  margin: auto;
+  margin: 5px auto 10px auto;
   background-color: salmon;
   text-align: center;
   color: black;
