--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<ngb-carousel fxFlex fxAign="center">
+<ngb-carousel>
   <ng-template ngbSlide>
     <img src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/sliderhome%2FSlidehome1.png?alt=media&token=683799e3-6714-4882-8ede-3fa415531a50" width="100%"/>
 
