--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <app-header></app-header>
 <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="15px" fxLayoutAlign.gt-sm="center stretch">
-  <div fxFlex="1%"></div>
+  <div fxFlex="5%"></div>
 <app-carousel fxFlex="50%"></app-carousel>
 <app-donate-card fxFlex></app-donate-card>
 </div>
 
 <app-card-line></app-card-line>
+
+<app-rounded-card></app-rounded-card>
