--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <app-header></app-header>
 <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="15px" fxLayoutAlign.gt-sm="center stretch">
-  <div fxFlex="5%"></div>
 <app-carousel fxFlex="50%"></app-carousel>
-<div fxFlex fxFlexLayout="column" fxLayout.lt-sm="row">
-  <app-donate-card ></app-donate-card>
-  <app-rounded-card ></app-rounded-card>
 </div>
+<div fxFlexLayout.lt-md="column" fxLayout="row">
+  <app-donate-card fxFlex></app-donate-card>
+  <app-rounded-card fxFlex></app-rounded-card>
 </div>
+
 
 <app-card-line></app-card-line>
 
