--- a/src/app/rounded-card/rounded-card.component.css
+++ b/src/app/rounded-card/rounded-card.component.css
@@ -4,7 +4,7 @@
   text-align: center;
   margin: auto auto;
 }
-.rounded {
+img {
  width: 100px;
  border-radius: 50%;
  margin: 0 auto -10px auto;
