--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
-<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="15px" fxLayoutAlign.gt-sm="center stretch">
-<app-carousel fxFlex="50%"></app-carousel>
+<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign.gt-sm="center center">
+  <app-carousel fxFlex="54%"></app-carousel>
 </div>
-<div fxFlexLayout.lt-md="column" fxLayout="row">
+<div fxFlexLayout.lt-md="column" fxFlexLayout="row" fxLayoutAlign="center strech">
   <app-donate-card fxFlex></app-donate-card>
   <app-rounded-card fxFlex></app-rounded-card>
 </div>
