--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
 <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="center center">
   <app-carousel fxFlex="54%"></app-carousel>
 </div>
-<div fxLayout.lt-="column" fxLayout="row" fxLayoutAlign="center strech">
-  <app-donate-card fxFlex></app-donate-card>
-  <app-rounded-card fxFlex></app-rounded-card>
+<div fxLayout.lt-sm="column" fxLayout="row" fxLayoutAlign="center center">
+  <app-donate-card fxFlex fxFlex.gt-sm="30%"></app-donate-card>
+  <app-rounded-card fxFlex fxFlex.gt-sm="30%"></app-rounded-card>
 </div>
 
 
