--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,10 @@
-<div>
-<img src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/logo%2Flogo.png?alt=media&token=cc57b534-3083-4407-9eff-64443d0c1e53" alt="logo da IAME" width="10%">
-</div>
+<header fxLayout="column">
+  <div fxFlex fxLayout="row">
+    <div class="spacer" fxFlex></div>
+  <img id="logo" fxFlex src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/logo%2Flogo.png?alt=media&token=cc57b534-3083-4407-9eff-64443d0c1e53" alt="logo da IAME" fxFlex="10%">
+  </div>
+  <mat-divider></mat-divider>
+<nav fxFlex fxLayout="row">
+  <a mat-button href=""><mat-icon>home</mat-icon> Home</a>
+</nav>
+</header>
