--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -7,9 +7,12 @@ header img {
   border-radius: 50%;
 }
 header nav {
-  margin: 1vh 1vw;
+  padding: 1vh 1vw;
+  background-color: salmon;
+  color: white;
+  font-weight: 600;
 };
 
-header na {
-  background-color: white
+header nav a {
+  background-color: white;
 }
