--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,12 @@
 <header fxLayout="column">
   <div fxFlex fxLayout="row">
-    <div class="spacer" fxFlex></div>
-  <img id="logo" fxFlex src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/logo%2Flogo.png?alt=media&token=cc57b534-3083-4407-9eff-64443d0c1e53" alt="logo da IAME" fxFlex="10%">
+    <div class="spacer" fxFlex fxHied.lt-sm="true"></div>
+  <img id="logo" fxFlex src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/logo%2Flogo.png?alt=media&token=cc57b534-3083-4407-9eff-64443d0c1e53" alt="logo da IAME" fxFlex.gt-sm="10%" fxFlex="50%">
   </div>
   <mat-divider></mat-divider>
 <nav fxFlex fxLayout="row">
   <a mat-button href=""><mat-icon>home</mat-icon> Home</a>
+  <a mat-button href=""><mat-icon>favorite</mat-icon> O AME</a>
+  <a mat-button href=""><mat-icon>folder_open</mat-icon> Projetos</a>
 </nav>
 </header>
