--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,5 +8,10 @@
   <a mat-button href=""><mat-icon>home</mat-icon> Home</a>
   <a mat-button href=""><mat-icon>favorite</mat-icon> O AME</a>
   <a mat-button href=""><mat-icon>folder_open</mat-icon> Projetos</a>
+  <a mat-button href=""><mat-icon>accessibility_new</mat-icon> Seja Voluntário</a>
+  <a mat-button href=""><mat-icon>card_giftcard</mat-icon> Doações</a>
+  <a mat-button href=""><mat-icon>shopping_cart</mat-icon> Loja</a>
+  <a mat-button href=""><mat-icon>business</mat-icon> Patrocinadores</a>
+  <a mat-button href=""><mat-icon>card_membership</mat-icon> Clube de Vantagens</a>
 </nav>
 </header>
