--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,4 +14,17 @@
   <a mat-button href=""><mat-icon>business</mat-icon> Patrocinadores</a>
   <a mat-button href=""><mat-icon>card_membership</mat-icon> Clube de Vantagens</a>
 </nav>
+<nav fxFlex fxLayout="row" fxHide.gt-xs="true">
+<a mat-button [matMenuTriggerFor]="belowMenu" ><mat-icon>list</mat-icon> Menu</a>
+<mat-menu #belowMenu="matMenu" yPosition="below">
+  <a mat-button href=""><mat-icon>home</mat-icon> Home</a>
+  <a mat-button href=""><mat-icon>favorite</mat-icon> O AME</a>
+  <a mat-button href=""><mat-icon>folder_open</mat-icon> Projetos</a>
+  <a mat-button href=""><mat-icon>accessibility_new</mat-icon> Seja Voluntário</a>
+  <a mat-button href=""><mat-icon>card_giftcard</mat-icon> Doações</a>
+  <a mat-button href=""><mat-icon>shopping_cart</mat-icon> Loja</a>
+  <a mat-button href=""><mat-icon>business</mat-icon> Patrocinadores</a>
+  <a mat-button href=""><mat-icon>card_membership</mat-icon> Clube de Vantagens</a>
+</mat-menu>
+</nav>
 </header>
