4 files modified, 3 added

--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,16 +1,25 @@
 <ngb-carousel>
   <ng-template ngbSlide>
     <img src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/sliderhome%2FSlidehome1.png?alt=media&token=683799e3-6714-4882-8ede-3fa415531a50" width="100%"/>
+    <div class="carousel-caption">
+      <h2>Coragem</h2>
+    </div>
 
   </ng-template>
   <ng-template ngbSlide>
     <img src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/sliderhome%2FSlidehome2.png?alt=media&token=06985ba3-83cd-4ce5-b06e-9a1844f8f267" width="100%"/>
+    <div class="carousel-caption">
+      <h2>Amor</h2>
+    </div>
   </ng-template>
   <!--<ng-template ngbSlide>
     <img src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/sliderhome%2Fslidehome3.png?alt=media&token=82a0ef81-a3af-4744-ae2c-4fd31b972390" width="100%"/>
   </ng-template>-->
   <ng-template ngbSlide>
     <img src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/sliderhome%2Fslidehome4.png?alt=media&token=9189f508-401f-4479-91f7-55316ba6f41c" width="100%"/>
+    <div class="carousel-caption">
+      <h2>Proteção</h2>
+    </div>
 </ng-template>
 </ngb-carousel>
 
