--- a/src/app/rounded-card/rounded-card.component.html
+++ b/src/app/rounded-card/rounded-card.component.html
@@ -2,6 +2,6 @@
   <img class="rounded" src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/sliderhome%2FSlidehome1.png?alt=media&token=683799e3-6714-4882-8ede-3fa415531a50"/>
   <div class="rounded-card-area-texto">
     <p></p>
-    <p>Texto para text</p>
+    <p>Texto para textemunho</p>
   </div>
 </div>
