--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,6 @@
 <header fxLayout="column">
-  <div fxFlex fxLayout="row" fxLayoutAlign="center center">
-    <div class="spacer" fxFlex fxHide.lt-sm="true"></div>
-  <img id="logo" fxFlex src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/logo%2Flogo.png?alt=media&token=cc57b534-3083-4407-9eff-64443d0c1e53" alt="logo da IAME" fxFlex.gt-sm="10%" fxFlex="50%">
+  <div fxFlex fxLayout="row" fxLayoutAlign="center center">    
+    <img id="logo" src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/logo%2Flogo.png?alt=media&token=cc57b534-3083-4407-9eff-64443d0c1e53" alt="logo da IAME" fxFlex.gt-sm="15%" fxFlex="50%">
   </div>
   <mat-divider></mat-divider>
 <nav fxFlex fxLayout="row" fxHide.lt-sm="true">
