--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,6 +1,8 @@
 footer {
   background-color: mistyrose;
-  
+  border-top: 10px solid salmon;
+  border-bottom: 10px solid salmon;
+  margin-top: 2vh;  
 }
 footer img {
   background-color: white;
