--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,4 @@
 <app-header></app-header>
-<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="center center">
-  <app-carousel fxFlex="54%"></app-carousel>
-</div>
-<div fxLayout.lt-sm="column" fxLayout="row" fxLayoutAlign="center center">
-  <app-donate-card fxFlex fxFlex.gt-sm="30%"></app-donate-card>
-</div>
-
-
-<app-card-line></app-card-line>
-
-<app-rounded-card></app-rounded-card>
-
+<router-outlet></router-outlet>
 <app-footer></app-footer>
 
