--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer fxLayout="row">
 
-  <nav fxFlex fxAlign="start center">
+  <nav fxFlex.gt-sm="30%" fxFlex.sm="35%" fxFlex fxAlign="start center">
     <ul>
       <li><a href=""><mat-icon>home</mat-icon> Home</a></li>
       <li><a href=""><mat-icon>favorite</mat-icon> O AME</a></li>
