--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,8 +2,8 @@
 
   <nav fxFlex.gt-sm="30%" fxFlex.sm="35%" fxFlex fxAlign="start center">
     <ul>
-      <li><a href=""><mat-icon>home</mat-icon> Home</a></li>
-      <li><a href=""><mat-icon>favorite</mat-icon> O AME</a></li>
+      <li><a [routerLink]="['/h']"><mat-icon>home</mat-icon> Home</a></li>
+      <li><a [routerLink]="['/about']"><mat-icon>favorite</mat-icon>O AME</a></li>
       <li><a href=""><mat-icon>folder_open</mat-icon> Projetos</a></li>
       <li><a href=""><mat-icon>accessibility_new</mat-icon> Seja Voluntário</a></li>
       <li><a href=""><mat-icon>card_giftcard</mat-icon> Doações</a></li>
