--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -1,5 +1,6 @@
 <p>
-O AME
+O AME - página em construção
 </p>
 <p>
-  <img src="http://shearsystems.com/images/under-construction-flashing-barricade.gif?crc=227531636"></p>
+  <img src="https://pwiwebstudio.com.br/blog/wp-content/uploads/2018/08/223169-manutencao-de-sites-por-que-e-importante-desde-a-construcao-da-pagina-1024x688.jpg" width="50%">
+</p>
