--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,14 +2,14 @@
 
   <nav fxFlex.gt-sm="30%" fxFlex.sm="35%" fxFlex fxAlign="start center">
     <ul>
-      <li><a [routerLink]="['/h']"><mat-icon>home</mat-icon> Home</a></li>
+      <li><a [routerLink]="['/home']"><mat-icon>home</mat-icon> Home</a></li>
       <li><a [routerLink]="['/about']"><mat-icon>favorite</mat-icon>O AME</a></li>
-      <li><a href=""><mat-icon>folder_open</mat-icon> Projetos</a></li>
-      <li><a href=""><mat-icon>accessibility_new</mat-icon> Seja Voluntário</a></li>
-      <li><a href=""><mat-icon>card_giftcard</mat-icon> Doações</a></li>
-      <li><a href=""><mat-icon>shopping_cart</mat-icon> Loja</a></li>
-      <li><a href=""><mat-icon>business</mat-icon> Patrocinadores</a></li>
-      <li><a href=""><mat-icon>card_membership</mat-icon> Clube de Vantagens</a></li>
+      <li><a [routerLink]="['/projetos']"><mat-icon>folder_open</mat-icon> Projetos</a></li>
+      <li><a [routerLink]="['/voluntario']"><mat-icon>accessibility_new</mat-icon> Seja Voluntário</a></li>
+      <li><a [routerLink]="['/doacao']"><mat-icon>card_giftcard</mat-icon> Doações</a></li>
+      <li><a [routerLink]="['/loja']"><mat-icon>shopping_cart</mat-icon> Loja</a></li>
+      <li><a [routerLink]="['/patrocinio']"><mat-icon>business</mat-icon> Patrocinadores</a></li>
+      <li><a [routerLink]="['/clube']"><mat-icon>card_membership</mat-icon> Clube de Vantagens</a></li>
     </ul>
   </nav>
   <div class="image" fxFlex fxLayoutAlign="end center">    
