6 files modified, 2 added

--- a/src/app/components/carousel-home/carousel-home.component.html
+++ b/src/app/components/carousel-home/carousel-home.component.html
@@ -2,7 +2,7 @@
   <ng-template ngbSlide  *ngFor="let slide of slides">
     <img [src]="slide.url" width="100%"/>
     <div class="carousel-caption">
-      <h2>{{slide.texto}}</h2>
+      <h2>{{slide.texto | uppercase}}</h2>
     </div>
   </ng-template>
 
