--- a/src/app/components/depoimento/depoimento.component.html
+++ b/src/app/components/depoimento/depoimento.component.html
@@ -1,3 +1,3 @@
-<div [@visibility]="visibility">
+<div class="depoimento" [@visibility]="visibility">
   <app-rounded-card [img_url]="depoimento?.url" [texto]="depoimento?.texto"></app-rounded-card>
 </div>
