--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header fxLayout="column">
   <div class="image" fxFlex fxLayout="row" fxLayoutAlign="center center">    
-    <img id="logo" src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/logo%2Flogo.png?alt=media&token=cc57b534-3083-4407-9eff-64443d0c1e53" alt="logo da IAME" fxFlex.gt-sm="15%" fxFlex="50%">
+    <img id="logo" src="https://firebasestorage.googleapis.com/v0/b/iame-e84f9.appspot.com/o/logo%2Flogo.png?alt=media&token=cc57b534-3083-4407-9eff-64443d0c1e53" alt="logo da IAME" fxFlex.gt-sm="15%" fxFlex.sm="30%" fxFlex.lt-sm="40%">
   </div>
   <mat-divider></mat-divider>
 <nav fxFlex fxLayout="row" fxHide.sm="true" fxHide.lt-sm="true">
