--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -5,6 +5,7 @@ header img {
   background-color: white;
   margin: 1vh 1vw;
   border-radius: 50%;
+  min-width: 200px;
 }
 header nav {
   padding: 1vh 1vw;
