--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="center center">
-  <app-carousel-home fxFlex="60%"></app-carousel-home>
+  <app-carousel-home fxFlex.lt-sm="90%" fxFlex.sm="80%" fxFlex.gt-sm="70%"></app-carousel-home>
 </div>
 <div fxLayout.lt-sm="column" fxLayout="row" fxLayoutAlign="center center">
   <app-donate-card fxFlex fxFlex.gt-sm="30%"></app-donate-card>
