--- a/src/app/components/rounded-card/rounded-card.component.css
+++ b/src/app/components/rounded-card/rounded-card.component.css
@@ -1,6 +1,6 @@
 .rounded-card{
-  padding: 5px 0px 5px 0px;
-  width: 300px;
+  padding: 5 0px 5px 0px;
+  height: 60vh;
   text-align: center;
   margin: auto auto;
 }
