--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -8,6 +8,7 @@
 
 <app-card-line></app-card-line>
 
-<app-depoimento></app-depoimento>
-
-<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Finstitutoamebr%2F&tabs=timeline&width=500&height=180&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=546527249439068" width="500" height="180" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+<div fxLayout.gt-sm="row" fxLayout="column" fxLayoutGap="10px">
+  <iframe fxFlex src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Finstitutoamebr%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=546527249439068" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+  <app-depoimento fxFlex></app-depoimento>
+</div>
