--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -8,7 +8,7 @@
 
 <app-card-line></app-card-line>
 
-<div class="line" fxLayout.gt-sm="row" fxLayout="column" fxLayoutGap="10px">
-  <app-depoimento fxFlex fxAlign.gt-sm="end"></app-depoimento>
-    <iframe fxFlex fxAlign.gt-sm="end" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Finstitutoamebr%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=546527249439068" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+<div class="line" fxLayout.gt-sm="row" fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center">
+  <app-depoimento fxFlexOrder.gt-sm="2" fxFlex fxFlexAlign.gt-sm="center"></app-depoimento>
+    <iframe fxFlexOrder.gt-sm="1" fxFlex fxFlexAlign.gt-sm="center" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Finstitutoamebr%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=546527249439068" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 </div>
