5 files modified, 4 added

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -6,9 +6,8 @@
 </div>
 
 
-<app-card-line></app-card-line>
+<app-card-line path="cardsHome"></app-card-line>
 
 <div class="line" fxLayout.gt-sm="row" fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center ">
   <app-depoimento fxFlexOrder.gt-sm="2" fxFlex fxFlex.gt-sm="66%" fxFlex.gt-md="50%" fxFlexAlign.gt-sm="center"></app-depoimento>
-    <iframe fxFlexOrder.gt-sm="1" fxFlex fxFlex.gt-sm="33%" fxFlex.gt-md="30%" fxFlexAlign.gt-sm="center" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Finstitutoamebr%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=546527249439068" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 </div>
