2 files modified, 3 added

--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -1,2 +1,6 @@
 
+<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="center center">
+  <app-video-top fxFlex.lt-sm="90%" fxFlex.sm="80%" fxFlex.gt-sm="70%"></app-video-top>
+</div>
+
 <app-card-line path="cardsHome"></app-card-line>
