--- a/src/app/components/video-top/video-top.component.css
+++ b/src/app/components/video-top/video-top.component.css
@@ -1,12 +1,13 @@
-.container {
+video {
   overflow: hide;
-  margin: 5px auto 10px auto;
-  text-align: center;
   color: black;
+  padding: 10px 0;
+  width: 100%;
 }
 
-video {
-  padding: 0 0;
-  height: 75vh;
-  border: 10px solid salmon;
+.container {
+  margin: 5px auto 10px auto;
+  background-color: salmon;
+  text-align: center;
+  width: 1%
 }
