--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -3,4 +3,4 @@
   <app-video-top fxFlex.lt-sm="90%" fxFlex.sm="60%" fxFlex.gt-sm="50%"></app-video-top>
 </div>
 
-<app-card-line path="cardsAb"></app-card-line>
+<app-card-line path="cardsAbout"></app-card-line>
