--- a/src/app/components/demonstrativo/demonstrativo.component.html
+++ b/src/app/components/demonstrativo/demonstrativo.component.html
@@ -1,18 +1,17 @@
-<div fxLayout="row" fxLayoutGap="15px" fxLayoutAlign="center center">
-  <mat-card class="generic-card" [class.mat-elevation-z1]="true">
+
+  <mat-card class="generic-card" [class.mat-elevation-z4]="true">
   <mat-card-title-group >
-    
     <mat-card-title >
-     RESULTADOS
+     Resultados
     </mat-card-title>
   </mat-card-title-group>
   <mat-card-content>
-    <p>Clique no link abaixo para ver o nosso demonstrativos de resultados/2018
-Somos uma entidade sem fins lucrativos que depende de doações para manter nossas atividades.
-Nosso orgulho é nossa transparência. Ajude-nos a continuar esse trabalho</p>
+    <p>Somos uma entidade sem fins lucrativos que depende de doações para manter nossas atividades.
+      Nosso orgulho é nossa transparência. Ajude-nos a continuar esse trabalho</p>
+      <p>Clique no link abaixo para ver o nosso demonstrativos de resultados/2018.</p>
   </mat-card-content>
   <mat-card-actions fxLayoutAlign="center center">
-    <button mat-raised-button><mat-icon>description</mat-icon> Demonstrativo 2018!</button>
+    <button mat-raised-button><mat-icon>description</mat-icon> Demonstrativo!</button>
+     <button mat-raised-button><mat-icon>favorite</mat-icon> Doar!</button>
   </mat-card-actions>
 </mat-card>
-</div>
