--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -3,8 +3,9 @@
 <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="center center">
   <app-video-top fxFlex.lt-sm="90%" fxFlex.sm="60%" fxFlex.gt-sm="50%"></app-video-top>
 </div>
+
 <app-card-line path="cardsAbout"></app-card-line>
-<div fxLayout.gt-sm="row" fxLayout="column" fxLayoutAlign="center center">
+
+<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign.gt-sm="center center">
   <app-demonstrativo fxFlex.lt-sm="90%" fxFlex.sm="60%" fxFlex.gt-sm="50%"></app-demonstrativo>
-  <app-donate-card fxFlex></app-donate-card>
 </div>
